# telegram-mail-bot

./: .dockerignore  .env.template  .gitignore  Dockerfile  Pipfile  README.md  bot.py  docker-compose.yml  pyproject.toml  run.sh
utils/: __init__.py  client_base.py  client_imap.py  client_pop3.py  mail.py  migration.py  oauth2_helper.py  smtpclient.py
