[tool.pdm]
[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"

[tool.pdm.dev-dependencies]
dev = [
    "pylint",
]

[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot[job-queue]>=21.6",
    "pyzmail36",
    "pysondb",
    "python-dotenv",
    "pysocks>=1.7.1",
    "pytz>=2024.2",
    "requests>=2.32.3",
    "tzlocal>=5.2",
    "markdownify>=0.13.1",
]
